--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-base="light"
-primaryColor="#c15bbf"
+primaryColor="#5b81c1"
+backgroundColor="#eeebe8"
 secondaryBackgroundColor="#dcdcdc"
 textColor="#000000"
